@@ -22,6 +22,7 @@ import org.openrewrite.Issue;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.openrewrite.maven.Assertions.pomXml;
 
@@ -511,7 +512,7 @@ class ChangeParentPomTest implements RewriteTest {
         @Test
         void dependencyWithExplicitVersionRemovedFromDepMgmt() {
             rewriteRun(spec -> spec.recipe(new ChangeParentPom("org.springframework.cloud", null, "spring-cloud-config-dependencies", null, "3.1.4", null, null,
-                Collections.singletonList("com.jcraft:jsch"))),
+                List.of("com.jcraft:jsch"))),
               pomXml("""
             <?xml version="1.0" encoding="UTF-8"?>
             <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
